# auth_service

./: .env  Cargo.toml  yarte.toml
migrations/2020-10-05-152548_users/: up.sql
src/: email_service.rs  errors.rs  main.rs  models.rs  password_handler.rs  register_handler.rs  schema.rs  templates.rs  utils.rs  vars.rs
templates/includes/: head.hbs  message.hbs
templates/layouts/: base.hbs
templates/pages/: password.hbs  register.hbs
