[package]
name = "auth_service"
version = "0.1.0"
authors = ["Rodolfo Ruiz <rpruiz@me.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.4.0"
actix-files = "0.3.0"
actix-rt = "1.1.1"
actix-session = "0.4.0"
actix-web = "3.1.0"
argonautica = "0.2.0"
cookie = "0.14"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.11"
diesel = { version = "1.4.5", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
lettre = "0.10.0-alpha.2"
native-tls = "0.2.4"
r2d2 = "0.8.9"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
yarte = "0.12.2"

[build-dependencies]
yarte = "0.12.2"
